# NarratorDB

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
benchmark_records/: index.json  longmemeval_v4flash_30_20260714.json  mem0_platform_v3_longmemeval_20260407.json  narratordb_codex_cli_canary_20260717.json  narratordb_full500_glm52_20260715.json  narratordb_full500_predict_20260714.json  narratordb_full500_v4flash_20260714.json  narratordb_full500_v4flash_deepinfra_aborted_20260714.json  narratordb_full500_v4flash_routing_canary_20260714.json  narratordb_gpt5_official_short_diagnostics_20260717.json  narratordb_intelligence_dev42_gpt54mini_20260716.json  narratordb_intelligence_dev42_gpt54mini_20260716_postmortem.md  narratordb_intelligence_dev42_v18_gpt54mini_official_r3_20260717.json  narratordb_intelligence_dev42_v7_v11_paired_20260716.json  narratordb_intelligence_dev42_v7_v11_paired_20260716_postmortem.md  narratordb_intelligence_dev42_v7_v13_paid_pair_direct_score_20260717.SHA256SUMS  narratordb_intelligence_dev42_v7_v13_paid_pair_direct_score_20260717.json  narratordb_intelligence_dev42_v7_v8_paired_20260716.json  narratordb_optimized_retrieval_30_20260714.json  original_author_suite_cost_estimate_20260717.json  reproduction-v13-paid-paired-scoring-c291-failed-preflight-20260716.SHA256SUMS  reproduction-v13-paid-paired-scoring-c291-failed-preflight-20260716.json  reproduction-v13-paid-paired-scoring-r2-6da3-failed-preflight-20260716.SHA256SUMS  reproduction-v13-paid-paired-scoring-r2-6da3-failed-preflight-20260716.json  reproduction-v13-paid-paired-scoring-r3-90f6-failed-preflight-20260716.SHA256SUMS  reproduction-v13-paid-paired-scoring-r3-90f6-failed-preflight-20260716.json  reproduction-v13-paid-paired-scoring-r4-7939-failed-v7-completeness-20260716.SHA256SUMS  reproduction-v13-paid-paired-scoring-r4-7939-failed-v7-completeness-20260716.json  reproduction-v13-paid-paired-scoring-r5-3453-failed-finalization-20260716.SHA256SUMS  reproduction-v13-paid-paired-scoring-r5-3453-failed-finalization-20260716.json  reproduction-v13-paid-paired-scoring-r5-finalization-recovery-r1-43ed-terminal-20260716.SHA256SUMS  reproduction-v13-paid-paired-scoring-r5-finalization-recovery-r1-43ed-terminal-20260716.json  reproduction-v13-paid-paired-scoring-r5-finalization-recovery-r2-20260716.RECOVERY_GO.json  reproduction-v13-paid-paired-scoring-r5-finalization-recovery-r2-20260716.review-1.json  (+5 more)
docs/: codex-cli-compiler.md  mcp.md  (+2 more)
(+433 files in other folders)
